--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-pandas>=1.0.0
-nidaqmx>=0.6.0
-pyreadline>=2.1
-scikit-learn>=0.24.0
+# Core data processing and analysis
+pandas>=1.5.0
+numpy>=1.21.0
+
+# National Instruments DAQ hardware interface
+nidaqmx>=0.6.5
+
+# Command line interface with autocomplete
+# For Windows systems
+pyreadline3>=3.4.1
+# For Unix-like systems (Linux, macOS)
+readline
